ログ出力、エラーコード型変更
